# Low-Latency-Android-iOS-Linux-Windows-tvOS-macOS-Interactive-Audio-Platform

./: .gitignore  README.md  README.txt  license.txt
Docs/: _superpowered3_band_e_q_8h.html  _superpowered_8h.html  _superpowered_8h_source.html  _superpowered_a_e_s_8h.html  _superpowered_a_e_s_8h_source.html  _superpowered_advanced_audio_player_8h.html  _superpowered_analyzer_8h.html  _superpowered_android_audio_i_o_8cpp.html  _superpowered_android_audio_i_o_8h.html  _superpowered_android_u_s_b_8h.html  _superpowered_android_u_s_b_8h_source.html  _superpowered_audio_buffers_8h.html  _superpowered_bandpass_filterbank_8h.html  _superpowered_bitcrusher_8h.html  _superpowered_bitcrusher_8h_source.html  _superpowered_c_p_u_8h.html  _superpowered_clipper_8h.html  _superpowered_compressor_8h.html  _superpowered_decoder_8h.html  _superpowered_delay_8h.html  _superpowered_delay_8h_source.html  _superpowered_echo_8h.html  _superpowered_f_x_8h.html  _superpowered_filter_8h.html  _superpowered_flanger_8h.html  _superpowered_frequency_domain_8h.html  _superpowered_gate_8h.html  _superpowered_generator_8h.html  _superpowered_generator_8h_source.html  _superpowered_guitar_distortion_8h.html  _superpowered_guitar_distortion_8h_source.html  _superpowered_h_t_t_p_8h.html  _superpowered_h_t_t_p_8h_source.html  _superpowered_hash_8h.html  _superpowered_hash_8h_source.html  _superpowered_i_o_s_audio_i_o_8h.html  _superpowered_i_o_s_audio_i_o_8mm.html  _superpowered_j_s_o_n_8h.html  _superpowered_j_s_o_n_8h_source.html  _superpowered_limiter_8h.html  (+209 more)
Examples_Android/SuperpoweredFrequencyDomain/app/: CMakeLists.txt  build.gradle
Examples_Android/SuperpoweredFrequencyDomain/app/src/main/: AndroidManifest.xml
Examples_Android/SuperpoweredFrequencyDomain/app/src/main/cpp/: FrequencyDomain.cpp
Examples_Android/SuperpoweredFrequencyDomain/app/src/main/java/com/superpowered/frequencydomain/: MainActivity.java
Examples_Android/SuperpoweredFrequencyDomain/app/src/main/res/values/: strings.xml
Examples_Android/SuperpoweredPlayer/app/: CMakeLists.txt  build.gradle
Examples_Android/SuperpoweredPlayer/app/src/main/: AndroidManifest.xml
Examples_Android/SuperpoweredPlayer/app/src/main/cpp/: PlayerExample.cpp
Examples_Android/SuperpoweredPlayer/app/src/main/java/com/superpowered/playerexample/: MainActivity.java
Examples_Android/SuperpoweredPlayer/app/src/main/res/layout/: activity_main.xml
Examples_Android/SuperpoweredPlayer/app/src/main/res/values/: strings.xml
Examples_Android/SuperpoweredUSBExample/complexusb/src/main/jni/: CMakeLists.txt  complexusb.cpp  latencyMeasurer.cpp  latencyMeasurer.h
Examples_Android/SuperpoweredUSBExample/simpleusb/src/main/jni/: CMakeLists.txt  simpleusb.cpp
Examples_Flutter/superpowered_player_with_effects/android/: CMakeLists.txt  build.gradle  settings.gradle
Examples_Flutter/superpowered_player_with_effects/android/cpp/: SuperpoweredEngineExampleAndroid.cpp
Examples_Flutter/superpowered_player_with_effects/android/src/main/: AndroidManifest.xml
Examples_Linux/: buildARM32Hard.sh  buildX86.sh  buildX86_64.sh
Examples_ReactNative/SuperpoweredPlayerWithEffects/android/app/: CMakeLists.txt  OnLoad.cpp  build.gradle
Examples_ReactNative/SuperpoweredPlayerWithEffects/android/app/src/debug/java/com/superpoweredplayerwitheffects/: ReactNativeFlipper.java
Examples_ReactNative/SuperpoweredPlayerWithEffects/android/app/src/main/java/com/superpoweredplayerwitheffects/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt  NativeSuperpoweredEngineModule.kt  NativeSuperpoweredEnginePackage.kt  SuperpoweredModule.java  SuperpoweredModule.kt  SuperpoweredPackage.java  SuperpoweredPackage.kt
Examples_ReactNative/SuperpoweredPlayerWithEffects/android/app/src/main/res/values/: strings.xml
Examples_ReactNative/SuperpoweredPlayerWithEffects/android/app/src/release/java/com/superpoweredplayerwitheffects/: ReactNativeFlipper.java
Examples_Windows/: CommonProperties.props  SuperpoweredExamples.sln  example_helpers.h  helpers.h
Superpowered/: Superpowered.h  Superpowered.podspec  Superpowered3BandEQ.h  SuperpoweredAEC.h  SuperpoweredAES.h  SuperpoweredAdvancedAudioPlayer.h  SuperpoweredAnalyzer.h  SuperpoweredAndroidAudioIO.cpp  SuperpoweredAndroidAudioIO.h  SuperpoweredAndroidUSB.h  SuperpoweredAudioBuffers.h  SuperpoweredAudiofilePlayer.h  SuperpoweredAutomaticVocalPitchCorrection.h  SuperpoweredBandpassFilterbank.h  SuperpoweredBitcrusher.h  SuperpoweredCPU.h  SuperpoweredClipper.h  SuperpoweredCompressor.h  SuperpoweredDecoder.h  SuperpoweredDeinterleave.cpp  SuperpoweredDeinterleave.h  SuperpoweredDelay.h  SuperpoweredEcho.h  SuperpoweredFFT.h  SuperpoweredFX.h  SuperpoweredFilter.h  SuperpoweredFlanger.h  SuperpoweredFrequencyDomain.h  SuperpoweredGate.h  SuperpoweredGenerator.h  SuperpoweredGuitarDistortion.h  SuperpoweredHTTP.h  SuperpoweredHash.h  SuperpoweredIOSAudioIO.h  SuperpoweredIOSAudioIO.mm  SuperpoweredIOSAudioOutput.h  SuperpoweredIOSAudioOutput.mm  SuperpoweredJSON.h  SuperpoweredLimiter.h  SuperpoweredMixer.h  (+18 more)
SuperpoweredExample/: CoreAudio.h  CoreAudio.mm  Superpowered.mm  SuperpoweredExample-Info.plist  ViewController.h  ViewController.mm  fftTest.h
SuperpoweredExample.xcodeproj/: project.pbxproj
SuperpoweredPerformance/: AppDelegate.m  Superpowered.mm  SuperpoweredPerformance-Info.plist  SuperpoweredPerformance-Prefix.pch  ViewController.m  fftTest.h
docs/: _superpowered3_band_e_q_8h_source.html  _superpowered_advanced_audio_player_8h_source.html  _superpowered_analyzer_8h_source.html  _superpowered_android_audio_i_o_8h_source.html  _superpowered_audio_buffers_8h_source.html  _superpowered_audiofile_player_8h_source.html  _superpowered_bandpass_filterbank_8h_source.html  _superpowered_c_p_u_8h_source.html  _superpowered_clipper_8h_source.html  _superpowered_compressor_8h_source.html  _superpowered_decoder_8h_source.html  _superpowered_deinterleave_8h_source.html  _superpowered_echo_8h_source.html  _superpowered_f_f_t_8h.html  _superpowered_f_f_t_8h_source.html  _superpowered_f_x_8h_source.html  (+168 more)
(+653 files in other folders)
